Trying to generalize lex_utils. WIP

--- a/bin/setup/lang/merge_1.htm
+++ b/bin/setup/lang/merge_1.htm
@@ -61,3 +61,5 @@ of seconds or some minutes, depending on the cases. Be patient.
      $ cd "%w"
 %s{     $ %x%/gwu %a -o %a.gw|}     $ %x%/gwc %s{-sep %a.gw |}\-f -o %o
 </pre>
+</body>
+</html>
