--- a/bin/setup/lang/recover2.htm
+++ b/bin/setup/lang/recover2.htm
@@ -22,13 +22,12 @@
 
 <br><p>
 
-%v{[Warning: there already exists a database named "%o" in the <a href="gwsetup?lang=%l;v=list.htm">destination directory</a>. If you push the button below, it will be erased. If you just made this handling, it is probably its result, therefore it is not important. Otherwise, go back and choose another name for your database.]
+%v{[Warning: there already exists a database named "%o" in the destination directory. If you push the button below, it will be erased. If you just made this handling, it is probably its result, therefore it is not important. Otherwise, go back and choose another name for your database.]
 %(
-Warning: there already exists a database named "%o" in the <a href="gwsetup?lang
-=%l;v=list.htm">destination directory</a>. If you push the button below, it will
- be erased. If you just made this handling, it is probably its result, therefore
- it is not important. Otherwise, go back and choose another name for your databa
-se.
+Warning: there already exists a database named "%o" in the destination directory. 
+If you push the button below, it will be erased. If you just made this handling,
+it is probably its result, therefore it is not important. Otherwise, go back and
+choose another name for your database.
 %)
 <p>}
 
