--- a/bin/setup/lang/bso.htm
+++ b/bin/setup/lang/bso.htm
@@ -15,66 +15,47 @@
 <body %Vbody_prop;>
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
-<h1 style="margin:0;">
-[Creation of a database]
-</h1>
+<h1 style="margin:0;">[Creation of a database]</h1>
 </div>
-
-<p /><p />
+<p>
 <ul>
-
 %v{<li>
-
-[<b>Warning</b>: there already exists a database with the name "%o" in your directory. If you push the button "Ok" below, it will be erased.]
+[Warning: there already exists a database with the name "%o" in your directory. If you push the button "Ok" below, it will be erased.]
 %(
-<b>Warning</b>: there already exists a database with the name "%o" in your directory.
+Warning: there already exists a database with the name "%o" in your directory.
 If you push the button "Ok" below, it will be erased.
 %)
-<p />
-
+<p>
 [If you just made this, it is probably its result, and therefore it is not important. Else, return to the previous page and choose another name for your database.]
 %(
-If you just made this, it is probably its result, and therefore it is not import
-ant. Else, return to the previous page and choose another name for your database
-.
+If you just made this, it is probably its result, and therefore it is not important. 
+Else, return to the previous page and choose another name for your database.
 %)
-<p />}
-
+<p>}
 <li>
-
 [We are going to create a database named "%o". Remark: this operation can answer in the twinkling of a eye or take some tenths of seconds or some minutes, depending on the cases. Be patient.]
 %(
 We are going to create a database named "%o". Remark: this operation can answer 
 in the twinkling of a eye or take some tenths of seconds or some minutes, depend
 ing on the cases. Be patient.
 %)
-
-<p />
-
+<p >
 [Push the button below to create you database]
-%v{<br /><blink><font color=red>[, and overwrite the previous database "%o" of the target directory]
+%v{<br><blink><font color=red>[, and overwrite the previous database "%o" of the target directory]
 </font></blink>}:
-
-<p />
-
+<p>
 <form method="post" action="%d">
 %h
 <dl><dt><dd>
-<input type="submit" value="Ok" />
-<input type="submit" name="cancel" value="[cancel]
-" />
+<input type="submit" value="Ok">
+<input type="submit" name="cancel" value="[cancel]">
 </dl>
 </form>
-
-<p />
-
+<p>
 [For information, this operation corresponds to the following commands:]
-
 <pre>
      $ cd "%w"
      $ %x%/%d%p > comm.log
 </pre>
-
 [This builds a directory named "%o.gwb".]
-
 </ul>
