One more revision for gwsetup. Removed the one shot code in lex_utils.ml

--- a/bin/setup/lang/bso.htm
+++ b/bin/setup/lang/bso.htm
@@ -52,10 +52,12 @@ ing on the cases. Be patient.
 </dl>
 </form>
 <p>
-[For information, this operation corresponds to the following commands:]
+[For information, this operation corresponds to the following commands][:]
 <pre>
      $ cd "%w"
      $ %x%/%d%p > comm.log
 </pre>
 [This builds a directory named "%o.gwb".]
 </ul>
+</body>
+</html>
