--- a/bin/setup/lang/cleanup1.htm
+++ b/bin/setup/lang/cleanup1.htm
@@ -22,7 +22,7 @@
 <p>
 [Warning: this operation can take some seconds or minutes, depending on the cases. Be patient.]
 <p>
-[Push the button below to start the operation.]
+[Push this button to start][:]
 <p>
 <form method="post" action="cleanup_1">
 %h
@@ -43,4 +43,6 @@
         $ move %a.gwb old\.
      $ %x%/gwc tmp.gw -nofail -o %a > comm.log
 </pre>
+</body>
+</html>
 
