--- a/bin/setup/lang/connex_ok.htm
+++ b/bin/setup/lang/connex_ok.htm
@@ -24,10 +24,10 @@
 [By looking at the terminal window if you have not asked for result redirection.]
 <li>
 %Io1;;{
-[Using <b>gwd</b> to visualize the  file</a> in the NOTES folder of your base where you have redirected output (%a.gwb/notes_d/connex.txt).<br> This file contains the last set of data stored at this location (which is not necessarily the one you have just computed - see the time stamp at the head of the file).<br> This solution allows you to follow links to designated persons.]
+[Using <b>gwd</b> to visualize the file in the NOTES folder of your base where you have redirected output (%a.gwb/notes_d/connex.txt).<br> This file contains the last set of data stored at this location (which is not necessarily the one you have just computed - see the time stamp at the head of the file).<br> This solution allows you to follow links to designated persons.]
 (<a href="http://%m:%P/%a?w=w;lang=%l;m=NOTES;f=connex">connex.txt</a>)
 %(
-Using <b>gwd</b> to visualize the  file in the NOTES folder of your base
+Using <b>gwd</b> to visualize the file in the NOTES folder of your base
 where you have redirected output (%a.gwb/notes_d/connex.txt).<br>
 This file contains the last set of data stored at this location
 (which is not necessarily the one you have just computed -see the
