--- a/bin/setup/lang/err_smdr.htm
+++ b/bin/setup/lang/err_smdr.htm
@@ -15,14 +15,9 @@
 <body %Vbody_prop;>
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
-<h1 style="margin:0;"><font color="red">[error]
-</font></h1>
+<h1 style="margin:0;"><font color="red">[error]</font></h1>
 </div>
-
-<br /><p />
-
-[You selected the same directory than the one of this <font color=#2f6400><b>GeneWeb</b></font> distribution.]
-%(
-You selected the same directory than the one of this <font color=#2f6400><b>Gene
-Web</b></font> distribution.
-%)
+<p>
+[You selected the same directory than the one of this %G distribution.]
+</body>
+</html>
