--- a/bin/setup/lang/ged2gwb.htm
+++ b/bin/setup/lang/ged2gwb.htm
@@ -38,7 +38,7 @@
 </table>
 <span style="font-size:80%%">
 <table>
-<tr><td valign="top">[Note:]
+<tr><td valign="top">[Note][:]
 </td>
 <td>[../ allows you to reach the parent directory.<br> In the Windows world, this will be insufficient to change the drive letter (C: -> D:), but you can do this directly in the url in your navigator.]
 %(
@@ -131,7 +131,7 @@ al first name: e.g. -fne "\\" or -fne "()".
 <td colspan=2><span style="font-family: monospace">
    -fne         </span>
 <input type="input" name="fne" size="2" maxlength="2" style="padding-left:4px">
-[ (do not enter the quotes "" in the input zone).]
+ [(do not enter the quotes "" in the input zone).]
 </td></tr>
 </table>
 <p>
