--- a/bin/setup/lang/gwd_ok.htm
+++ b/bin/setup/lang/gwd_ok.htm
@@ -15,34 +15,21 @@
 <body %Vbody_prop;>
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
-<h1>
-[Parameters updated]
-</h1>
+<h1>[Parameters updated]</h1>
 </div>
-
 <p>
-
-<font color=red>[In order to take the parameters into account, the <a href="gwsetup?lang=%l;v=gwd_info.htm">gwd service</a> must be stopped, if it was running, and restarted.]
-%(
-In order to take the parameters into account, the <a href="gwsetup?lang=%l;v=gwd
-_info.htm">gwd service</a> must be stopped, if it was running, and restarted.
-%)
+<font color=red>
+[In order to take the parameters into account, the gwd service must be stopped, if it was running, and restarted.]
 </font>
-
 <p>
-
-[Information: the parameters are recorded in a text file named "gwd.arg" in the directory "gw" of your <font color=#2f6400><b>GeneWeb</b></font> distribution.]
+[Information: the parameters are recorded in a text file named "gwd.arg" in the directory "gw" of your %G distribution.]
 %(
-Information: the parameters are recorded in a text file named "gwd.arg" in the d
-irectory "gw" of your <font color=#2f6400><b>GeneWeb</b></font> distribution.
+Information: the parameters are recorded in a text file named "gwd.arg" in the
+directory "gw" of your %G distribution.
 %)
-
 <p>
-
 [Here is its contents][:]
-
 <p>
-
 <dl><dt><dd>
 <pre>
 %r{- [empty file]
