--- a/bin/setup/lang/recover.htm
+++ b/bin/setup/lang/recover.htm
@@ -15,34 +15,21 @@
 <body %Vbody_prop;>
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
-<h1 style="margin:0;">
-[Recover a database]
-</h1>
+<h1 style="margin:0;">[Recover a database]</h1>
 </div>
-
 <p>
-
 <form method=GET action="recover">
 <input type=hidden name=lang value="%l">
-
-[Select the name of the <em>directory</em> where your old version of <font color=#2f6400><b>GeneWeb</b></font> is located (it must contain a filen named <tt>gwu</tt> or <tt>gwu.exe</tt>).]
+[Select the name of the <em>directory</em> where your old version of %G is located (it must contain a filen named <tt>gwu</tt> or <tt>gwu.exe</tt>).]
 %(
-Select the name of the <em>directory</em> where your old version of <font color=
-#2f6400><b>GeneWeb</b></font> is located (it must contain a filen named <tt>gwu<
-/tt> or <tt>gwu.exe</tt>).
+Select the name of the <em>directory</em> where your old version of %G is located 
+(it must contain a filen named <tt>gwu</tt> or <tt>gwu.exe</tt>).
 %)
-
 <p>
-
 %j
-
 <p>
-
-[Then push this button:]
-
-<p>
-
-<input type=submit value="[Search]
-">
-
+[Then click on this button][:]
+<input type=submit value="[Search]">
 </form>
+</body>
+</html>
