--- a/bin/setup/lang/recover1.htm
+++ b/bin/setup/lang/recover1.htm
@@ -21,7 +21,7 @@
 <pre>
   %a
 </pre>
-[Select the database you want to recover:]
+[Select the database you want to recover][:]
 <p>
 <form method=GET action="recover_1">
 <input type=hidden name=lang value="%l">
@@ -44,7 +44,9 @@ e in the new directory.
 <p>
 <dl><dt><dd><table style="border:1px solid">
 <tr><td><input type=checkbox name=ged value="on">   </td>
-<td>[Pass by a GEDCOM file. A priori, it is not recommended, but if it does not work with the normal procedure, try this option.</td>]
+<td>
+[Pass by a GEDCOM file. A priori, it is not recommended, but if it does not work with the normal procedure, try this option.]
+</td>
 %(
 Pass by a GEDCOM file. A priori, it is not recommended, but if it does not work 
 with the normal procedure, try this option.</td>
@@ -57,3 +59,5 @@ with the normal procedure, try this option.</td>
 <p>
 <input type=submit value="[Recover]">
 </form>
+</body>
+</html>
