--- a/bin/setup/lang/recover2.htm
+++ b/bin/setup/lang/recover2.htm
@@ -15,13 +15,9 @@
 <body %Vbody_prop;>
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
-<h1 style="margin:0;">
-[Recover a database]
-</h1>
+<h1 style="margin:0;">[Recover a database]</h1>
 </div>
-
-<br><p>
-
+<p>
 %v{[Warning: there already exists a database named "%o" in the destination directory. If you push the button below, it will be erased. If you just made this handling, it is probably its result, therefore it is not important. Otherwise, go back and choose another name for your database.]
 %(
 Warning: there already exists a database named "%o" in the destination directory. 
@@ -30,53 +26,41 @@ it is probably its result, therefore it is not important. Otherwise, go back and
 choose another name for your database.
 %)
 <p>}
-
-[Starting directory and database:]
-
+[Starting directory and database][:]
 <pre>
   %a
   %i
 </pre>
-
-[Destination directory and database:]
-
+[Destination directory and database][:]
 <pre>
   %w
   %o
 </pre>
-
 <p>
-
 [Warning: the operation can take several seconds or minutes, depending on the case. Be patient.]
 %(
-Warning: the operation can take several seconds or minutes, depending on the cas
-e. Be patient.
+Warning: the operation can take several seconds or minutes, depending on the case.
+Be patient.
 %)
-
 <p>
-
 [Push the below button to launch the operation]
 %v{<br><blink><font color=red>[, and overwrite the database "%o" of the destination directory]
 </font></blink>}:
-
 <p>
-
 <form method=POST action="recover_2">
 %h
 <dl><dt><dd>
 <input type=submit value="Ok">
-<input type=submit name=cancel value="[cancel]
-">
+<input type=submit name=cancel value="[cancel]">
 </dl>
 </form>
-
 <p>
-
-[For information, this operation corresponds to the following commands:]
-
+[For information, this operation corresponds to the following commands][:]
 <pre>
      $ cd "%a"
      $ .%/%U %i %O %w%/%T
      $ cd "%w"
      $ %x%Vsrc2new; %T -f -o %o > comm.log
 </pre>
+</body>
+</html>
