--- a/bin/setup/lang/ren_ok.htm
+++ b/bin/setup/lang/ren_ok.htm
@@ -15,25 +15,17 @@
 <body %Vbody_prop;>
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
-<h1 style="margin:0;">
-[Operation completed]
-</h1>
+<h1 style="margin:0;">[Operation completed]</h1>
 </div>
-
-<br><p>
-
-[Your databases have been renamed. Here is the new list:]
-
 <p>
-
+[Your databases have been renamed. Here is the new list][:]
+<p>
 <ul>
-
 %b{<li><a href="http://%m:%P/%a">%a</a>|
 <li>[there is no database at present]
 }
-
 </ul>
-
 <p>
-
-[You can return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.]
+[Return to the main menu.] (<a href="gwsetup?lang=%l;v=welcome.htm">welcome</a>)
+</body>
+</html>
