--- a/bin/setup/lang/bsi_fix.htm
+++ b/bin/setup/lang/bsi_fix.htm
@@ -15,38 +15,30 @@
 <body %Vbody_prop;>
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
-<h1 style="margin:0;">
-[Application of "%d"]
-</h1>
+<h1 style="margin:0;">[Application of "%d"]</h1>
 </div>
-
 [The operation "%d" will be applied on your database "%a". Warning: it can take some seconds or some minutes, depending on the case. Be patient.]
 %(
-The operation "%d" will be applied on your database "%a". Warning: it can take s
-ome seconds or some minutes, depending on the case. Be patient.
+The operation "%d" will be applied on your database "%a". Warning: it can take some
+seconds or some minutes, depending on the case. Be patient.
 %)
-
-<p />
+<p>
 [<span style="color:#FF0000;">WARNING</span>: this command modifies the base irreversibly. It may be prudent to have a backup archive.]
 %(
-<span style="color:#FF0000;">WARNING</span>: this command modifies the base irre
-versibly. It may be prudent to have a backup archive.
+<span style="color:#FF0000;">WARNING</span>: this command modifies the base irreversibly.
+It may be prudent to have a backup archive.
 %)
-
-<p />
-[Push the button below to start:]
-
-<p />
-
+<p>
+[Push this button to start][:]
+<p>
 <form method="post" action="%d">
 %h
 <dl><dt><dd><input type="submit" value="Ok" /></dl>
 </form>
-
 <p>
-
-[For information, this operation corresponds to the following commands:]
-
+[For information, this operation corresponds to the following commands][:]
 <pre>
      $ %x%/%d %p > comm.log
 </pre>
+</body>
+</html>
