--- a/bin/setup/lang/consg_ok.htm
+++ b/bin/setup/lang/consg_ok.htm
@@ -15,15 +15,12 @@
 <body %Vbody_prop;>
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
-<h1 style="margin:0;">
-[Operation completed]
-</h1>
+<h1 style="margin:0;">[Operation completed]</h1>
 </div>
-
-[So. The operation "%d" on the database "%a" is terminated.]
+[The operation "%d" on the database "%a" is terminated.]
 <p>
-[You can consult it:]
+[You can consult it][:]
 <p>
 <ul><li><a href="http://%m:%P/%a">http://%m:%P/%a</a></ul>
-<p><br>
-… [or return to the main menu.] (<a href="gwsetup?lang=%l;v=welcome.htm">welcome</a>)
+<p>
+[Return to the main menu.] (<a href="gwsetup?lang=%l;v=welcome.htm">welcome</a>)
