--- a/bin/setup/lang/err_ndir.htm
+++ b/bin/setup/lang/err_ndir.htm
@@ -15,18 +15,12 @@
 <body %Vbody_prop;>
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
-<h1 style="margin:0;"><font color="red">[error]
-</font></h1>
+<h1 style="margin:0;"><font color="red">[error]</font></h1>
 </div>
-
-[There is no directory with this name:]
-
-<p />
-
+[There is no directory with this name][:]
+<p>
 <pre>
      %a
 </pre>
-
-<p />
-
+<p>
 [Return to the previous screen and write the good directory.]
