--- a/bin/setup/lang/gwd.htm
+++ b/bin/setup/lang/gwd.htm
@@ -116,12 +116,11 @@ vigate, or somebody accesses to one of your databases, 4 or 5 lines are displaye
 d.
 %)
 <p>
-[If you want that the traces rather go in a file, write here the name of the file here. This file will be created if it does not exist, in the main directory of <font color=#2f6400><b>GeneWeb</b></font> where you see the commands "gwsetup" and "gwd". It will be extended at each request.]
+[If you want that the traces rather go in a file, write here the name of the file here. This file will be created if it does not exist, in the main directory of %G where you see the commands "gwsetup" and "gwd". It will be extended at each request.]
 %(
 If you want that the traces rather go in a file, write here the name of the file
  here. This file will be created if it does not exist, in the main directory of 
-<font color=#2f6400><b>GeneWeb</b></font> where you see the commands "gwsetup" a
-nd "gwd". It will be extended at each request.
+%G where you see the commands "gwsetup" and "gwd". It will be extended at each request.
 %)
 </td>
 </tr>
@@ -137,12 +136,12 @@ Other parameters exist for the command "gwd", but are not configurable here beca
 use they can perturbate the operation of "gwsetup".
 %)
 <p>
-[Indeed, the navigation by "gwsetup" is mainly destinated to make the use of <font color=#2f6400><b>GeneWeb</b></font> simpler, but does not allow to exploit quite all the possibilities. To find the other parameters and their use, you must be a little bit "hacker": some informations can be found in the documentation.]
+[Indeed, the navigation by "gwsetup" is mainly destinated to make the use of %G simpler, but does not allow to exploit quite all the possibilities. To find the other parameters and their use, you must be a little bit "hacker": some informations can be found in the documentation.]
 %(
-Indeed, the navigation by "gwsetup" is mainly destinated to make the use of <fon
-t color=#2f6400><b>GeneWeb</b></font> simpler, but does not allow to exploit qui
-te all the possibilities. To find the other parameters and their use, you must b
-e a little bit "hacker": some informations can be found in the documentation.
+Indeed, the navigation by "gwsetup" is mainly destinated to make the use of %G simpler, 
+but does not allow to exploit quite all the possibilities. To find the other
+parameters and their use, you must be a little bit "hacker": some informations
+can be found in the documentation.
 %)
 <p>
 <li>
