--- a/bin/setup/lang/gwd_info.htm
+++ b/bin/setup/lang/gwd_info.htm
@@ -31,11 +31,10 @@
 </pre>
 </ul>
 <p>
-<ul><li>[Under Linux, if you installed <font color=#2f6400><b>GeneWeb</b></font> as an rpm package, the service has been automatically launched. If you stopped it and want to restart it, become root and type:]
+<ul><li>[Under Linux, if you installed %G as an rpm package, the service has been automatically launched. If you stopped it and want to restart it, become root and type][:]
 %(
-Under Linux, if you installed <font color=#2f6400><b>GeneWeb</b></font> as an rp
-m package, the service has been automatically launched. If you stopped it and wa
-nt to restart it, become root and type:
+Under Linux, if you installed %G as an rpm package, the service has been
+automatically launched. If you stopped it and want to restart it, become root and type
 %)
 <p>
 <pre>
@@ -48,11 +47,7 @@ nt to restart it, become root and type:
 <ul><li>[Under Windows or Unix, type "control C" in the window where it is running.]
 </ul>
 <p>
-<ul><li>[Under Linux, if you installed <font color=#2f6400><b>GeneWeb</b></font> as an rpm package, become root and type:]
-%(
-Under Linux, if you installed <font color=#2f6400><b>GeneWeb</b></font> as an rp
-m package, become root and type:
-%)
+<ul><li>[Under Linux, if you installed %G as an rpm package, become root and type][:]
 <p>
 <pre>
      $ /etc/rc.d/init.d/gwd stop
