--- a/bin/setup/lang/main.htm
+++ b/bin/setup/lang/main.htm
@@ -28,17 +28,15 @@
 <p>
 <ul>
 <li>[with the simple method] (<a href="gwsetup?lang=%l;v=simple.htm">gwc</a>)
-<li>[from a GEDCOM file] (<a href="gwsetup?lang=%l;v=ged2gwb.htm">ged2gwb</a>)
-<li>[from a GEDCOM file (ged2gwb2)] (<a href="gwsetup?lang=%l;v=ged2gwb2.htm">ged2gwb2</a>)
+<li>[from a GEDCOM source file] (<a href="gwsetup?lang=%l;v=ged2gwb.htm">ged2gwb</a>)
 <li>[from a GeneWeb source file] (<a href="gwsetup?lang=%l;v=gwc.htm">gwc</a>)
-<li>[from a GeneWeb source file (gwc2)] (<a href="gwsetup?lang=%l;v=gwc2.htm">gwc2</a>)
 </ul>
 <p>
 <b>[Extract from a database]
 </b>
 <p>
 <ul>
-<li>[a GEDCOM file] (<a href="gwsetup?lang=%l;v=gwb2ged.htm">gwb2ged</a>)
+<li>[a GEDCOM source file] (<a href="gwsetup?lang=%l;v=gwb2ged.htm">gwb2ged</a>)
 <li>[a GeneWeb source file] (<a href="gwsetup?lang=%l;v=gwu.htm">gwu</a>)
 </ul>
 <p>
