--- a/bin/setup/lang/welcome.htm
+++ b/bin/setup/lang/welcome.htm
@@ -32,7 +32,7 @@
     <div>
       <span style="font-weight:bold">[Save]</span>
       <ul>
-        <li>[a GEDCOM file] (<a href="gwsetup?lang=%l;v=gwb2ged.htm">gwb2ged</a>)
+        <li>[a GEDCOM source file] (<a href="gwsetup?lang=%l;v=gwb2ged.htm">gwb2ged</a>)
         <li>[a GeneWeb source file] (<a href="gwsetup?lang=%l;v=gwu.htm">gwu</a>)
       </ul>
     </div>
@@ -41,7 +41,7 @@
   <div style="float:left; width:50%%;">
     <span style="font-weight:bold;">[Create Family Tree]</span>
     <ul>
-      <li>[from a GEDCOM file](<a href="gwsetup?lang=%l;v=ged2gwb.htm">ged2gwb</a>)
+      <li>[from a GEDCOM source file](<a href="gwsetup?lang=%l;v=ged2gwb.htm">ged2gwb</a>)
       <li>[from a GeneWeb source file] (<a href="gwsetup?lang=%l;v=gwc.htm">gwc</a>)
       <li>[empty] (<a href="gwsetup?lang=%l;v=simple.htm">gwc</a>)
     </ul>
