Some cleanup, GeneWeb -> %G in lexicon

--- a/bin/setup/lang/gwc.htm
+++ b/bin/setup/lang/gwc.htm
@@ -15,7 +15,7 @@
 <body %Vbody_prop;>
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
-<h1 style="margin:0;">[Import of a GeneWeb file]</h1>
+<h1 style="margin:0;">[Import a GeneWeb file]</h1>
 </div>
 <p />
 <form method=GET action="gwc">
