--- a/bin/setup/lang/welcome.htm
+++ b/bin/setup/lang/welcome.htm
@@ -17,9 +17,7 @@
   text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">[Management and creation]</h1>
 </div>
-
-<br><br>
-
+<p>
 <div class="welcome">
   <div style="float:left; width:50%%">
     <div>
@@ -37,19 +35,16 @@
       </ul>
     </div>
   </div>
-
   <div style="float:left; width:50%%;">
     <span style="font-weight:bold;">[Create Family Tree]</span>
     <ul>
-      <li>[from a GEDCOM source file](<a href="gwsetup?lang=%l;v=ged2gwb.htm">ged2gwb</a>)
+      <li>[from a GEDCOM source file] (<a href="gwsetup?lang=%l;v=ged2gwb.htm">ged2gwb</a>)
       <li>[from a GeneWeb source file] (<a href="gwsetup?lang=%l;v=gwc.htm">gwc</a>)
       <li>[empty] (<a href="gwsetup?lang=%l;v=simple.htm">gwc</a>)
     </ul>
   </div>
 </div>
-
-<br><hr /><br>
-
+<br><hr><br>
 <div>
   <div style="float:left;">
     <span><b>[Advanced Options]</b></span>
@@ -66,7 +61,6 @@
       <li>[Fixes problems in a base] (<a href="gwsetup?lang=%l;v=gwfix.htm">gwfixbase</a>)
     </ul>
   </div>
-
   <div style="float:left;">
     <span><b>[Configure]</b></span>
     <ul>
@@ -75,12 +69,9 @@
     </ul>
   </div>
 </div>
-
 <p style="clear:both">
-
 <p>
 [You can also consult the complete documentation of %G.] (%D)
-
 <br><br>
 <div style="float: left; align: center;">
   <span>[Display in][:]</span>
@@ -94,4 +85,5 @@
   <a href="sv">Svenska</a>
 </div>
 <br>
-
+</body>
+</html>
