--- a/bin/setup/lang/gwd.htm
+++ b/bin/setup/lang/gwd.htm
@@ -158,6 +158,7 @@ sv: Om "-" är valt, är det franska.
 <option value="br"%Edefault_lang=br;>%Lbr;
 <option value="ca"%Edefault_lang=ca;>%Lca;
 <option value="cs"%Edefault_lang=cs;>%Lcs;
+<option value="co"%Edefault_lang=cs;>%Lco;
 <option value="da"%Edefault_lang=da;>%Lda;
 <option value="de"%Edefault_lang=de;>%Lde;
 <option value="en"%Edefault_lang=en;>%Len;
@@ -179,6 +180,7 @@ sv: Om "-" är valt, är det franska.
 <option value="ru"%Edefault_lang=ru;>%Lru;
 <option value="sl"%Edefault_lang=sl;>%Lsl;
 <option value="sv"%Edefault_lang=sv;>%Lsv;
+<option value="tr"%Edefault_lang=sv;>%Ltr;
 <option value="zh"%Edefault_lang=zh;>%Lzh;
 </select>
 </td>
