--- a/bin/setup/lang/gwf_1.htm
+++ b/bin/setup/lang/gwf_1.htm
@@ -456,6 +456,7 @@ sv: Om det är "-", kommer det förvalda språket för kommandot "gwd" att gäll
 <option value="bg"%Edefault_lang=bg;>%Lbg;
 <option value="br"%Edefault_lang=br;>%Lbr;
 <option value="ca"%Edefault_lang=ca;>%Lca;
+<option value="co"%Edefault_lang=ca;>%Lco;
 <option value="cs"%Edefault_lang=cs;>%Lcs;
 <option value="da"%Edefault_lang=da;>%Lda;
 <option value="de"%Edefault_lang=de;>%Lde;
@@ -478,6 +479,7 @@ sv: Om det är "-", kommer det förvalda språket för kommandot "gwd" att gäll
 <option value="ru"%Edefault_lang=ru;>%Lru;
 <option value="sl"%Edefault_lang=sl;>%Lsl;
 <option value="sv"%Edefault_lang=sv;>%Lsv;
+<option value="tr"%Edefault_lang=sv;>%Ltr;
 <option value="zh"%Edefault_lang=zh;>%Lzh;
 </select>
 </td>
