--- a/bin/setup/lang/backg.htm
+++ b/bin/setup/lang/backg.htm
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
   <title>[
+co: Fiura di fondu
 de: Hintergrundbild
 en: Background image
 es: Imagen de fondo
@@ -25,6 +26,7 @@ sv: Bakgrundsbild
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
 [
+co: Fondu di screnu
 de: Hintergrundbild
 en: Background image
 es: Imagen de fondo
@@ -41,6 +43,8 @@ sv: Bakgrundsbild
 
 <li>
 [
+co: Per specificà una fiura di fondu per a basa di dati « %o »,
+    ci vole à mettela sottu sta forma :
 de: Um ein <b>Hintergrundbild</b> für die Datenbank "%o" anzugeben,
     gib hier den Dateinamen des Bildes ein:
 en: To specify a background image for the database "%o", you have to
@@ -60,6 +64,7 @@ sv: För att specifiera en bakgrundsbild för databasen "%o", måste du
 
 <pre>
      background="gwd%t{.exe}?m=IM;v=/[
+co: fiura.jpg
 de: bla.jpg
 en: foo.jpg
 es: toto.jpg
@@ -74,6 +79,8 @@ sv: foo.jpg
 <p />
 
 [
+co: rimpiazzendu « <tt>fiura.jpg</tt> » da u veru
+    nome di schedariu di a fiura.
 de: Ersetze dabei "<tt>bla.jpg</tt>" durch den echten Bildnamen.
 en: replacing "<tt>foo.jpg</tt>" by the real name of your image file.
 es: remplazando para ello "<tt>toto.jpg</tt>" por el  
@@ -89,6 +96,8 @@ it: rimpiazzando "<tt>pippo.jpg</tt>" col vero
 
 <li>
 [
+co: Piazzate u schedariu di a fiura in u cartulare
+    (chì vò duverete forse creà) :
 de: Lege die Bilddatei in folgendem Verzeichnis ab
     (Gegebenenfalls lege das Verzeichnis vorher an):
 en: Put the image file in the directory
