Update to add Corsican translations

--- a/bin/setup/lang/bsi.htm
+++ b/bin/setup/lang/bsi.htm
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
   <title>[
+co: Appiecazione di « %d »
 de: Funktion "%d" ausführen
 en: Application of "%d"
 es: Aplicación de "%d"
@@ -25,6 +26,7 @@ sv: Applicering av "%d"
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
 [
+co: Appiecazione di « %d »
 de: Funktion "%d" ausführen
 en: Application of "%d"
 es: Aplicación de "%d"
@@ -38,6 +40,9 @@ sv: Applicering av "%d"
 </div>
 
 [
+co: L’operazione « %d » hà da esse appiecata nant’à a vostra basa
+    di dati « %a ». Avertimentu : st’operazione pò piglià da qualchì
+	seconda à parechji minuti secondu à u casu. Aspettate per piacè.
 de: Die Funktion "%d" wird nun auf deiner Datenbank "%a" ausgeführt.
     Warnung: Das kann, abhängig vom Einzelfall, zwischen einigen Sekunden 
     und mehreren Minuten dauern. Bitte habe Geduld.
@@ -64,6 +69,7 @@ sv: Operationen "%d" kommer att appliceras på din databas "%a". Varning: det
 <p />
 
 [
+co: Primete nant’à u buttone quaghjò per principià :
 de: Drücke diesen Knopf um zu starten:
 en: Push the button below to start:
 es: Apoyar sobre el botón inferior para comenzar:
@@ -84,6 +90,8 @@ sv: Tryck på knappen nedan för att starta:
 <p>
 
 [
+co: Per a vostra infurmazione, st’operazione currisponde
+    à sta seguita di cumande :
 de: Zu deiner Information: Diese Funktion entspricht der Ausführung
     der folgenden Kommandos:
 en: For information, this operation corresponds to the following commands:
@@ -103,6 +111,7 @@ sv: Denna operation motsvarar de följande kommandona:
 </pre>
 
 [
+co: <span style="color:#FF0000;">AVERTIMENTU</span> : U cuntenutu di u schedariu %o serà rimpiazzatu.
 en: <span style="color:#FF0000;">WARNING</span>: The content of file %o will be overwritten.
 fr: <span style="color:#FF0000;">ATTENTION</span> : Le contenu du fichier %o sera écrasé.
 ]
